align fix

--- a/styles/index.css
+++ b/styles/index.css
@@ -21,20 +21,10 @@ html, body {
     /* transition: .5s; */
 }
 
-.td {
+.align {
     padding: 0;
     margin: 0;
-    text-align: center;
-    vertical-align: middle;
     float: left;
-}
-
-.captionTop {
-    text-align: center;
-    vertical-align: middle;
-}
-
-.captionBottom {
     text-align: center;
     vertical-align: middle;
 }
